# restrack

./: .gitignore  .pre-commit-config.yaml  HISTORY.md  LICENSE  README.md  alembic.ini  eslint.config.js  pyproject.toml  run_web.py  sample.env
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  security.yml
alembic/: README.md  env.py
alembic/versions/: 42d974fafb08_add_must_change_password_to_user.py
restrack/: auth.py  config.py
restrack/api/: api.py  auth.py  core.py  main.py
restrack/api/routers/: __init__.py  orders.py  users.py  worklists.py
restrack/auth/: __init__.py  auth.py
restrack/models/: cdm.py  worklist.py
restrack/ui/: copy_worklist.py  display_worklists.py  find_investigations.py  login.py  order_components.py  orders_for_patient_form.py  process_orders_for_display.py  refresh_functions.py  refresh_utils.py  remove_order_from_worklist.py  remove_worklist.py  ui.py  user_components.py  user_note.py  user_status_select.py  worklist_components.py  worklist_cross_selector.py
restrack/web/: README.md  __init__.py  app.py  auth.py  utils.py
restrack/web/static/css/: style.css
restrack/web/static/js/: app.js  debug.js
restrack/web/templates/: base.html  change_password.html  dashboard.html  login.html
restrack/web/templates/components/: copy_manager.html  (+6 more)
scratchpad/: api.py  display_worklists.py  find_orders.py  refresh_functions.py  refresh_utils.py
scripts/: check_password.py  create_admin.py  db_migrate.py  migrate_users.py  reset_admin.py  test_auth.py
