[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "restrack"
description = "Python application for results tracking."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "vvcb" }]
dependencies = [
    "pyodbc",
    "python-dotenv",
    "sqlmodel",
    "watchfiles",
    "fastapi[standard]",
    "jinja2",
    "python-multipart",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["restrack"]

[tool.setuptools.dynamic]
version = { attr = "restrack.__version__" }

[project.urls]
Homepage = "https://github.com/LTHTR-DST/restrack"
# Documentation = "https://vvcb.github.io/restrack/"

[dependency-groups]
dev = [
    "alembic>=1.16.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
]
